--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal_website",
   "version": "0.1.0",
-  "homepage": "https://riyazahuja.github.io/Website",
+  "homepage": "https://riyazahuja.github.io/test",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
